--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,8 +13,8 @@ h1 {
     color: steelblue;
 }
 
-img {
-    width: 200px;
+main img {
+    width: 150px;
     height: auto;
     border: 1px solid black;
     padding: 2px;
@@ -22,5 +22,32 @@ img {
 }
 
 p {
-    padding: 10px;
+    padding: 0;
 }
+
+main {
+    max-width: 840px;
+}
+
+aside {
+    width: 20rem;
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    padding: 1rem;
+    background-color: white;
+    color: black;
+    text-align: center;
+}
+
+aside img {
+    width: 200px;
+    height: auto;
+}
+
+footer {
+    margin-top: 15px;
+    border-top: 1px solid black;
+    text-align: center;
+}
+
+
