--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -40,35 +40,43 @@
   }
   
   .hero {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
+    position: relative;
+    height: 500px;
+    text-align: center;
   }
   
   .hero img {
+    display: block;
     width: 100%;
-    height: 500px;
-    object-fit: cover;
-    margin-bottom: 20px;
+    height: 100%;
   }
   
   .hero h1 {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 5%;
+    width: 100%;
     color: var(--accent1-color);
     font-size: 36px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    padding: 10px;
+    border-radius: 10px;
   }
   
   .hero article {
-    display: flex;
-    flex-direction: column;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 20px;
+    border-radius: 1opx;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    width: 50%;
   }
   
   .hero article h2 {
-    color: var(--primary-color);
+    color: var(--secondary-color);
     font-size: 24px;
     margin-bottom: 10px;
   }
@@ -76,12 +84,34 @@
     height: 100px;
     width: 100px;
     margin-right: 20px;
-    align-self: flex-start;
-    margin-bottom: 20px;
+    float: right;
   }
   
   .hero article p {
     color: var(--secondary-color);
-    margin-bottom: 20px;
-    flex-grow: 1; 
+    margin-bottom: 20px; 
+  }
+
+  .image-container img {
+    width: 200px;
+    height: 200px;
+    margin: 20px 0;
+    display: block;
+  }
+
+  .sociallinks a {
+    display: inline;
+    margin: 10px;
+  }
+
+  .sociallinks a img {
+    width: 30px;
+    height: 30px;
+    vertical-align: middle;
+  }
+
+  .sociallinks a span {
+    vertical-align: middle;
+    font-size: 14px;
+    margin-top: 5px;
   }
