--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -227,3 +227,86 @@
   margin-top: 10px;
   text-align: center;
   }
+
+  .accordion {
+    max-width: 800px;
+    margin: 40px auto;
+}
+
+.accordion-item {
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.accordion-button {
+    background-color: #fff;
+    color: #333;
+    padding: 20px;
+    width: 100%;
+    text-align: left;
+    border: none;
+    border-radius: 10px 10px 0 0;
+    cursor: pointer;
+}
+
+.accordion-button:hover {
+    background-color: #f0f0f0;
+}
+
+.accordion-content {
+    padding: 20px;
+    background-color: #f9f9f9;
+    border: 1px solid #ccc;
+    border-radius: 0 0 10px 10px;
+    display: none;
+}
+
+.accordion-content p {
+    margin-bottom: 20px;
+}
+
+input[type="checkbox"] {
+    display: none;
+}
+
+input[type="checkbox"]:checked + label + .accordion-content {
+    display: block;
+}
+
+.accordion-button::before {
+    content: "+";
+    font-size: 24px;
+    font-weight: bold;
+    float: right
+}
+
+.gallery-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-gap: 10px;
+  max-width: 100%;
+  margin: 40px auto;
+  }
+  
+  .gallery-grid figure {
+  background-color: #fff;
+  padding: 20px;
+  border: 1px solid #ddd;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  .gallery-grid figure img {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 10px 10px 0 0;
+  }
+  
+  .gallery-grid figure figcaption {
+  padding: 10px;
+  font-size: 16px;
+  color: #333;
+  }
+  
